src/snapshots/vlotus__snapshots__snapshot_multi_tab_workbook_second_active.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 365
expression: "render(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│A1: on Two                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Two ──────────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1  on Two                                                                  │
│   2                                                                          │
│   3                                                                          │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 Sheet1 │ Two │ Three                                                           
 -- NORMAL -- A1           :q quit  i/a:insert  v:visual  /:search  hjkl:move
