src/snapshots/vlotus__snapshots__snapshot_pointing_active_shows_point_submode_in_banner.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 414
expression: "render(&mut app, W, H)"
---
┌ Insert ──────────────────────────────────────────────────────────────────────┐
│A1: =B1                                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1  │=B1       │                                                            │
│   2                                                                          │
│   3                                                                          │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- INSERT (point) -- A1             EDIT — Enter to confirm, Esc to cancel
