src/snapshots/vlotus__snapshots__snapshot_search_active_with_matches.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 276
expression: "render_with_highlights(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│F6:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1  alpha                                                                   │
│   2               alphabet                                                   │
│   3                                                                          │
│   4                            beta                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- F6           :q quit  i/a:insert  v:visual  /:search  hjkl:move   
─── highlights ───
search match: (x=7..=18, y=5), (x=20..=31, y=6)
