src/snapshots/vlotus__snapshots__snapshot_search_prompt.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 258
expression: "render(&mut app, W, H)"
---
┌ Search ──────────────────────────────────────────────────────────────────────┐
│B3:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1  alpha                                                                   │
│   2               alphabet                                                   │
│   3                                                                          │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
/alpha
