src/snapshots/vlotus__snapshots__snapshot_showcmd_pending_mark.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 302
expression: "render(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│A1:                                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1                                                                          │
│   2                                                                          │
│   3                                                                          │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- A1 `          :q quit  i/a:insert  v:visual  /:search  hjkl:move
