src/snapshots/vlotus__snapshots__snapshot_tabline_overflow_with_active_in_view.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 379
expression: "render(&mut app, 50, 12)"
---
┌ Formula ───────────────────────────────────────┐
│A1:                                             │
└────────────────────────────────────────────────┘
┌ test | Four ───────────────────────────────────┐
│           A            B            C          │
│   1                                            │
│   2                                            │
│   3                                            │
│   4                                            │
└────────────────────────────────────────────────┘
 Sheet1 │ Two │ Three │ Four │ Five │ Six …       
 -- NORMAL -- A1             Switched to 'Four'
