src/snapshots/vlotus__snapshots__snapshot_v_line_selection.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 236
expression: "render_with_highlights(&mut app, W, H)"
---
┌ V-Line ──────────────────────────────────────────────────────────────────────┐
│A3: row2                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│           A            B            C            D            E              │
│   1  row0                                                                    │
│   2  row1                                                                    │
│   3  row2                                                                    │
│   4  row3                                                                    │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- V-LINE -- A3                                                    Count: 52   
─── highlights ───
cursor: (x=7..=18, y=7)
selection: (x=7..=18, y=6), (x=20..=31, y=6), (x=33..=44, y=6), (x=46..=57, y=6), (x=59..=70, y=6), (x=20..=31, y=7), (x=33..=44, y=7), (x=46..=57, y=7), (x=59..=70, y=7)
