src/snapshots/vlotus__snapshots__snapshot_variable_column_widths.snap
---
source: examples/vlotus/src/snapshots.rs
assertion_line: 352
expression: "render(&mut app, W, H)"
---
┌ Formula ─────────────────────────────────────────────────────────────────────┐
│A1: Long descriptive label                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ test | Sheet1 ───────────────────────────────────────────────────────────────┐
│                A              B     C       D            E            F      │
│   1  Long descriptive lab…       1 x                                         │
│   2  Another row                42 yz                                        │
│   3                                                                          │
│   4                                                                          │
│   5                                                                          │
│   6                                                                          │
│   7                                                                          │
│   8                                                                          │
│   9                                                                          │
│  10                                                                          │
│  11                                                                          │
│  12                                                                          │
│  13                                                                          │
│  14                                                                          │
│  15                                                                          │
│  16                                                                          │
│  17                                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
 -- NORMAL -- A1           :q quit  i/a:insert  v:visual  /:search  hjkl:move
